# OpenuAssembler

./: CMakeLists.txt  README.md  codeImg.c  codeImg.h  dataImg.c  dataImg.h  directiveFuncs.c  directiveFuncs.h  entryExternDataStructures.c  entryExternDataStructures.h  errorsHeader.h  fileHandling.c  fileHandling.h  handleEntExt.c  handleEntExt.h  handleNumbers.c  handleNumbers.h  instructionFuncs.c  instructionFuncs.h  labelAnalyze.c  labelAnalyze.h  labelAsArg.c  labelAsArg.h  labelHandling.c  labelHandling.h  lineParsing.c  lineParsing.h  main.c  printFile.c  printFile.h  spaceParse.c  spaceParse.h  symbolTable.c  symbolTable.h
Sample Inputs/: errors-test.as  ps.as  test.as  testOnlyLastERROR.as
